# pgm-map-studio

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  vitest.config.js
docs/: README.md  cross-cutting.md  ctw-map-pamphlet.md  design-audit.md  filter-use-cases.md  map-data-model.md  sketch-workflow.md  testing.md  ui-conventions.md
docs/contracts/: a-message-from-rockymine.md  api-schemas.md  data-layer-api.md  data-model.md  frontend-stack-decision.md  frontend-stack.md  geometry.md  refactor-constraints-and-pitfalls.md  region-authoring.md  region-categorization-fixture-annealing_iv.md  region-categorization.md  studio-domain-and-api-contract.md  validation-invariants.md
docs/requirements/: editor-build-regions.md  editor-configure.md  editor-filters.md  editor-objectives.md  editor-overview.md  editor-regions.md  editor-teams.md  editor.md  sketch-export.md  sketch-layout.md  sketch-overview.md  sketch-setup.md  sketch.md
docs/ui/: ui-conventions.md  ui-system-consolidation.md
plans/: 00_assessment.md  TODO.md  contract-first-migration-plan.md  editor-vision.md  implementation-plan.md  map-viewer-design-review.md  port-requirements.md  refactor-plan.md  ui-style-guide.txt  ui-system-consolidation.md
tests/: conftest.py  test_geometry.py
tools/: analyze_apply_targets.py  buildability_preview.py  gen_buildability_oracle.py  gen_region_authoring_oracle.py  gen_wool_oracle.py  generate_ts_contract.py  roundtrip_check.py  run_pipeline.py  run_studio_dev.py  studio-dev.ps1  studio-dev.sh  traversability_preview.py  validate_schemas.py
(+227 files in other folders)
